<resources>
    <string name="app_name">Agra Roller</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="agarwal_co">Agarwal Co.</string>
    <string name="name_of_your_company">Name of your Company</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="gst_number">GST_Number</string>
    <string name="gst_numbers">GST Number</string>
    <string name="phone">Phone</string>
    <string name="done">Done</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">logout</string>
    <string name="white_flour">white_flour</string>
    <string name="wheat">wheat</string>
    <string name="add_products">Add Products</string>
    <string name="price">Price</string>
    <string name="quality">Quality</string>
    <string name="upload_product">Upload_Product</string>
    <string name="id">ID</string>
    <string name="branded">Branded</string>
    <string name="local">Local</string>
    <string name="checkbox">CheckBox</string>
    <string name="quantity">Quantity</string>
    <string name="_50kg">50kg</string>
    <string name="_100kg">100Kg</string>
    <string name="textview">TextView</string>
    <string name="product2">Product2</string>
    <string name="product1">Product1</string>
    <string name="product3">Product3</string>
    <string name="product5">Product5</string>
    <string name="product7">Product7</string>
    <string name="product6">Product6</string>
    <string name="product4">Product4</string>
    <string name="product8">Product8</string>
    <string name="button">Button</string>
    <string name="proceed">Proceed</string>
    <string name="non_branded">Non-Branded</string>
    <string name="retailor">Retailor</string>
    <string name="maida">Maida</string>
    <string name="product">Product</string>
    <string name="p50kg">50Kg</string>
    <string name="suji">Suji</string>
    <string name="atta">Atta</string>
    <string name="fine_atta">Fine Atta</string>
    <string name="_0">0</string>
    <string name="place_order">Place Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="conform">Conform</string>
    <string name="decline">Decline</string>
    <string name="internet_error_cannot_load_summary">Internet Error Cannot Load Summary</string>
    <string name="loading">loading...</string>


</resources>
